<resources>
    <string name="app_name">My Application</string>

    <string-array name="country_codes">
        <item>+33</item>
        <item>+1</item>
        <item>+44</item>
        <item>+49</item>
        <item>+91</item>
    </string-array>

    <string name="connectez_vous">Connexion</string>
    <string name="mot_de_passe">Password</string>
    <string name="mot_de_passe_oublie">Forgot Password ?</string>
    <string name="nouveau_sur_jumia">New to Jumia ?</string>
    <string name="creer_compte">Create an account</string>
    <string name="identifiez_vous">Identify Yourself</string>
    <string name="email">E-Mail</string>
    <string name="ou">Or</string>
    <string name="connexion_facebook">Connect with Facebook</string>
    <string name="prenom">Firstname</string>
    <string name="nom">Lastname</string>
    <string name="mobile">Phone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>